environments/kubernetes/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plan
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
